Fixed Lang Icons uneven sizes

--- a/css/Mobile/mobile.css
+++ b/css/Mobile/mobile.css
@@ -404,6 +404,10 @@
     font-size: 1.5em;
   }
 
+  .lang img{
+    padding: 0.5em;
+  }
+
   .html {
     color: #e34c26;
   }
